fix: fixed design break in smaller devices. Make the whole website responsive for mobile apps using media queries.

--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ button {
   border-radius: 50%;
   background-color: #fff;
   position: absolute;
-  animation: fade-in 1s 1s backwards ;
+  animation: fade-in 1s 1s backwards;
 }
 
 .canvas__circle:nth-of-type(1) {
@@ -442,4 +442,108 @@ button {
 }
 
 .tool__icon {
+}
+
+/*---------------Media Queries-------------------*/
+
+@media (max-width: 1200px) {
+  .panel {
+    display: none;
+  }
+
+  .canvas {
+    width: 67vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .app__container {
+    height: initial;
+    min-height: 100vh;
+  }
+  .sidebar {
+    display: none;
+  }
+  .info-bar {
+    padding: 0 20px;
+  }
+  .artboard {
+    padding: 50px 20px;
+    margin-top: 0;
+    height: initial;
+  }
+  .canvas {
+    width: 100%;
+    height: 500px;
+  }
+  .tools {
+    height: 500px;
+  }
+}
+
+@media (max-width: 580px) {
+  .dd-toggle:nth-of-type(1),
+  .dd-toggle:nth-of-type(2),
+  .dd-toggle:nth-of-type(3) {
+    display: none;
+  }
+
+  .artboard {
+    flex-direction: column;
+  }
+
+  .canvas {
+    order: 2;
+    height: 450px;
+  }
+
+  .canvas__circle:nth-of-type(1) {
+    top: 11.5%;
+    left: 9.8%;
+  }
+  .canvas__circle:nth-of-type(2) {
+    top: 11.5%;
+    right: 9.8%;
+  }
+  .canvas__circle:nth-of-type(3) {
+    bottom: 11.5%;
+    right: 9.8%;
+  }
+  .canvas__circle:nth-of-type(4) {
+    bottom: 11.5%;
+    left: 9.8%;
+  }
+
+  .tools {
+    flex-direction: row;
+    column-gap: 5px;
+    height: initial;
+    margin-bottom: 15px;
+    order: 1;
+    align-self: start;
+  }
+
+  .tool:last-child {
+    margin: 0;
+  }
+}
+
+@media (max-width: 440px) {
+  .header {
+    justify-content: space-between;
+  }
+
+  .dd-toggle:nth-of-type(4),
+  .dd-toggle:nth-of-type(5) {
+    display: none;
+  }
+
+  .breadcrumbs__link,
+  .breadcrumbs__icon {
+    display: none;
+  }
+
+  .canvas {
+    height: 400px;
+  }
 }
